# proyecto-IBMAttrition

./: 01_eda.ipynb  02_entreno_rf.ipynb  02_results_analysis.ipynb  03_entreno_rf.ipynb  03_entreno_rl.ipynb  04_entreno_rl.ipynb  README.md  anotaciones.txt  config.yaml  eda.ipynb  main.py  pr.ipynb  pruebas_eda.ipynb  pruebas_entreno.ipynb  pyproject.toml  rl_pr.ipynb
data/: clean_data.csv
models/: rf_01_model.pkl  rf_02_model_15v.pkl  rf_02_model_smote.pkl  rl_01_model.pkl  rl_02_model_smote.pkl  rl_03_model_smote_15v.pkl
src/: data_loader.py  entreno_rf.py  evaluation.py  extractors.py  feature_engeneering.py  feature_ingeneering.py  loader.py  parser.py  processing.py  training.py  trainning.py
