[project]
name = "06-proyecto-intermodular-enero-estebansem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imblearn>=0.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
